--- a/html/final.html
+++ b/html/final.html
@@ -11,17 +11,12 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Тест завершен</h5>
-                <p class="card-text">Ваш результат: <span id="finalScore"></span> из <span id="totalQuestions"></span></p>
+                <p class="card-text">
+                    Ваш результат: <span id="finalScore"></span> 
+                    из <span id="totalQuestions"></span>
+                </p>
             </div>
         </div>
     </div>
-
-    <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const score = urlParams.get('score');
-        const totalQuestions = urlParams.get('total');
-        document.getElementById('finalScore').textContent = score;
-        document.getElementById('totalQuestions').textContent = totalQuestions;
-    </script>
 </body>
 </html>
