--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Интернет-тестирование</title>
+    <title>Anatomia</title>
+
+    <!--Подключаем библиотеку Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--Подключаем основные стили-->
+    <link href="/css/main.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Шапка сайта -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <!-- Логотип или текст "Anatomia" -->
+                <a class="navbar-brand" href="#">Anatomia</a>
+
+                <!-- Бургер-меню -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Вкладки меню -->
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Личный кабинет</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">О нас</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Поддержка</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+        <!-- Основная секция -->
+    <section class="hero-section">
+        <div class="container">
+            <h1>Получите план тренировок и питания в соответствии с вашим возрастом</h1>
+            <div class="row row-cols-1 row-cols-lg-3 row-cols-md-6 row-cols-sm-12">
+                <!-- Блок 1 -->
+                <div class="col-lg-3 col-md-6 col-sm-12 age-block">
+                    <img src="/img/zaglushka.jpg" alt="Мужчина 18-29">
+                    <p>Возраст: 18-29</p>
+                </div>
+                <!-- Блок 2 -->
+                <div class="col-lg-3 col-md-6 col-sm-12 age-block">
+                    <img src="/img/zaglushka.jpg" alt="Мужчина 30-39">
+                    <p>Возраст: 30-39</p>
+                </div>
+                <!-- Блок 3 -->
+                <div class="col-lg-3 col-md-6 col-sm-12 age-block">
+                    <img src="/img/zaglushka.jpg" alt="Мужчина 40-49">
+                    <p>Возраст: 40-49</p>
+                </div>
+                <!-- Блок 4 -->
+                <div class="col-lg-3 col-md-6 col-sm-12 age-block">
+                    <img src="/img/zaglushka.jpg" alt="Мужчина 50+">
+                    <p>Возраст: 50+</p>
+                </div>
+            </div>
+            <!-- Текст с согласием -->
+            <div class="consent-text">
+                Продолжая, я даю <a href="consent.html">Согласие на обработку моих персональных данных</a> и соглашаюсь с <a href="privacy.html">Политикой конфиденциальности</a>.
+            </div>
+        </div>
+    </section>
+
     <div class="container mt-5">
         <div class="progress mb-4">
             <div id="progressBar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -21,6 +88,9 @@
         </div>
     </div>
 
+    
+    <!-- Подключаем Bootstrap JS (для работы бургер-меню) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/scripts/test.js"></script>
 </body>
 </html>
