--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Подключаем библиотеку Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--Подключаем основные стили-->
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
     <!-- Шапка сайта -->
@@ -50,22 +50,22 @@
             <div class="row row-cols-1 row-cols-lg-3 row-cols-md-6 row-cols-sm-12">
                 <!-- Блок 1 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="/img/zaglushka.jpg" alt="Мужчина 18-29">
+                    <img src="img/zaglushka.jpg" alt="Мужчина 18-29">
                     <p>Возраст: 18-29</p>
                 </div>
                 <!-- Блок 2 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="/img/zaglushka.jpg" alt="Мужчина 30-39">
+                    <img src="img/zaglushka.jpg" alt="Мужчина 30-39">
                     <p>Возраст: 30-39</p>
                 </div>
                 <!-- Блок 3 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="/img/zaglushka.jpg" alt="Мужчина 40-49">
+                    <img src="img/zaglushka.jpg" alt="Мужчина 40-49">
                     <p>Возраст: 40-49</p>
                 </div>
                 <!-- Блок 4 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="/img/zaglushka.jpg" alt="Мужчина 50+">
+                    <img src="img/zaglushka.jpg" alt="Мужчина 50+">
                     <p>Возраст: 50+</p>
                 </div>
             </div>
@@ -133,6 +133,6 @@
     
     <!-- Подключаем Bootstrap JS (для работы бургер-меню) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/scripts/test.js"></script>
+    <script src="scripts/test.js"></script>
 </body>
 </html>
