Политика, оферта и отмена
Сделал три странички со стилями. Объединил стили для политики и оферты в один файл, осталось только добавить текст. Для отмены подписки реализовал первичную верстку, остальное на обсуждение.

--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark">
             <div class="container-fluid">
                 <!-- Логотип или текст "Anatomia" -->
                 <a class="navbar-brand" href="#">Anatomia</a>
 
                 <!-- Бургер-меню -->
-                <button class="navbar-toggler" type="button" 
-                data-bs-toggle="collapse" data-bs-target="#navbarNav" 
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon" data-bs-theme="red"></span>
+                <button 
+                    class="navbar-toggler" 
+                    type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNav" 
+                    aria-controls="navbarNav" 
+                    aria-expanded="false" 
+                    aria-label="Навигация"
+                >
+                    <span class="navbar-toggler-icon" style="color: #fff"></span>
                 </button>
 
                 <!-- Вкладки меню -->
@@ -118,8 +124,8 @@
             <div class="col-md-4 footer-section">
                 <h5>Правовая информация</h5>
                 <p><a href="privacy.html">Правила конфиденциальности</a></p>
-                <p><a href="public.html">Публичная оферта</a></p>
-                <p><a href="unsubscribe.html">Отмена подписки(не надо)</a></p>
+                <p><a href="publicoffert.html">Публичная оферта</a></p>
+                <p><a href="unsubscribeform.html">Отмена подписки(не надо)</a></p>
             </div>
         </div>
 
