--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!--Подключаем основные стили-->
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
 </head>
 <body>
     <!-- Шапка сайта -->
