--- a/publicoffert.html
+++ b/publicoffert.html
@@ -7,6 +7,7 @@
     <!-- Подключаем Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/policy-n-offert-n-form.css" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
 </head>
 <body>
     <!-- Секция с политикой конфиденциальности -->
