--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Личный кабинет</a>
+                            <a class="nav-link" href="authform.html">Личный кабинет</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">О нас</a>
