Картинки и анимация кругов
Добавил изображения для типов тестирования и реализовал анимацию заднего фона с плавающими размытыми кругами.

--- a/authform.html
+++ b/authform.html
@@ -10,6 +10,12 @@
     <link href="css/fonts.css" rel="stylesheet">
 </head>
 <body>
+    <div class="background-animation">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <section class="auth-section">
         <!-- Контейнер для формы отмены подписки -->
         <div class="auth-container">
@@ -32,5 +38,6 @@
 
     <!-- Подключаем Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/bganimation.js"></script>
 </body>
 </html>
