--- a/personalaccount.html
+++ b/personalaccount.html
@@ -6,6 +6,7 @@
     <title>Моё обучение</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="personalaccount.css">
+    <link href="css/fonts.css" rel="stylesheet">
 </head>
 <body>
     <div class="container mt-5">
