--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <link href="css/fonts.css" rel="stylesheet">
 </head>
 <body>
+    <div class="background-animation">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
     <!-- Шапка сайта -->
     <header>
         <nav class="navbar navbar-dark">
@@ -57,22 +63,22 @@
             <div class="row row-cols-1 row-cols-lg-3 row-cols-md-6 row-cols-sm-12">
                 <!-- Блок 1 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/zaglushka.jpg" alt="Мужчина 18-29">
+                    <img src="img/1829.png" alt="Мужчина 18-29">
                     <p>Возраст: 18-29</p>
                 </div>
                 <!-- Блок 2 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/zaglushka.jpg" alt="Мужчина 30-39">
+                    <img src="img/3039.jpeg" alt="Мужчина 30-39">
                     <p>Возраст: 30-39</p>
                 </div>
                 <!-- Блок 3 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/zaglushka.jpg" alt="Мужчина 40-49">
+                    <img src="img/4050.jpeg" alt="Мужчина 40-49">
                     <p>Возраст: 40-49</p>
                 </div>
                 <!-- Блок 4 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/zaglushka.jpg" alt="Мужчина 50+">
+                    <img src="img/50.jpeg" alt="Мужчина 50+">
                     <p>Возраст: 50+</p>
                 </div>
             </div>
@@ -140,6 +146,6 @@
     
     <!-- Подключаем Bootstrap JS (для работы бургер-меню) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts/test.js"></script>
+    <script src="scripts/bganimation.js"></script>
 </body>
 </html>
