--- a/index.html
+++ b/index.html
@@ -62,24 +62,36 @@
             <h1>Получите <span class="plananddiet">план тренировок и питания</span> в соответствии с вашим возрастом</h1>
             <div class="row row-cols-1 row-cols-lg-3 row-cols-md-6 row-cols-sm-12">
                 <!-- Блок 1 -->
+                 
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/1829.png" alt="Мужчина 18-29">
-                    <p>Возраст: 18-29</p>
+                    <a class="testlink" href="test1829.html">
+                        <img src="img/1829.png" alt="Мужчина 18-29">
+                        <p>Возраст: 18-29</p>
+                    </a>
                 </div>
+            
                 <!-- Блок 2 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/3039.jpeg" alt="Мужчина 30-39">
-                    <p>Возраст: 30-39</p>
+                    <a class="testlink" href="test1829.html">
+                        <img src="img/3039.jpeg" alt="Мужчина 30-39">
+                        <p>Возраст: 30-39</p>
+                    </a>
                 </div>
+
                 <!-- Блок 3 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/4050.jpeg" alt="Мужчина 40-49">
-                    <p>Возраст: 40-49</p>
+                    <a class="testlink" href="test1829.html">
+                        <img src="img/4050.jpeg" alt="Мужчина 40-49">
+                        <p>Возраст: 40-49</p>
+                    </a>
                 </div>
+
                 <!-- Блок 4 -->
                 <div class="col-lg-3 col-md-6 col-sm-12 age-block">
-                    <img src="img/50.jpeg" alt="Мужчина 50+">
-                    <p>Возраст: 50+</p>
+                    <a class="testlink" href="test1829.html">
+                        <img src="img/50.jpeg" alt="Мужчина 50+">
+                        <p>Возраст: 50+</p>
+                    </a>
                 </div>
             </div>
             <!-- Текст с согласием -->
