--- a/test1829.html
+++ b/test1829.html
@@ -35,7 +35,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/scripts/test1829script.js"></script>
+    <script src="scripts/test1829script.js"></script>
     <script src="scripts/bganimation.js"></script>
 </body>
 </html>
