Сделал набросок личного кабинета
Личный кабинет + кнопка для теста

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                             <a class="nav-link" href="authform.html">Личный кабинет</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="personalaccount.html">Пример ЛК</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">О нас</a>
                         </li>
                         <li class="nav-item">
