--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                             <a class="nav-link" href="authform.html">Личный кабинет</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="personalaccount.html">Личный кабинет Пример</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">О нас</a>
                         </li>
                         <li class="nav-item">
