--- a/personalaccount.html
+++ b/personalaccount.html
@@ -3,71 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моё обучение</title>
+    <title>Личный кабинет</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="personalaccount.css">
+    <link href="css/personalaccount.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Моё обучение</h1>
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Курсы</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Прохожу</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Избранные</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Хочу пройти</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Архив</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Классы</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Уведомление</a>
-            </li>
-        </ul>
-
-        <div class="mt-4">
-            <h2>Функциональное программирование на Python</h2>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 13%;" aria-valuenow="13" aria-valuemin="0" aria-valuemax="100">13%</div>
-            </div>
-            <p>21/17/878 баллов получено</p>
-            <button class="btn btn-primary">Продолжить</button>
-            <p>Осталось 1 358 баллов до сертификата</p>
-        </div>
-
-        <div class="mt-4">
-            <h3>Прохожу сейчас</h3>
-            <ul class="list-group">
-                <li class="list-group-item">
-                    Бакенд разработал на Django с нуля до специалиста
-                    <button class="btn btn-secondary float-right">Продолжить →</button>
+    <!-- Навбар -->
+    <nav class="navbar navbar-expand navbar-dark">
+        <a class="navbar-brand" href="index.html">
+            <!-- <img src="img/zaglushka.jpg" alt="Логотип" width="30" height="30" class="d-inline-block align-top"> -->
+            Anatomia
+        </a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="img/zaglushka.jpg" alt="Профиль" width="30" height="30">
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Мой профиль</a>
+                        <a class="dropdown-item" href="#">Настройки</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Выйти</a>
+                    </div>
                 </li>
             </ul>
         </div>
+    </nav>
 
-        <div class="mt-4">
-            <h3>О дней без перерыва</h3>
-            <p>Рекорд – 4 дня</p>
-            <p>16.28.31</p>
-            <p>Решите сегодня хотя бы одну задачу</p>
-            <p>149 задач решено</p>
-            <p>15 дней занятий</p>
+    <!-- Основной контент -->
+    <div class="container-fluid">
+        <!-- Кнопка для открытия сайдбара на мобильных устройствах -->
+        <button class="btn d-md-none" 
+        type="button" 
+        data-toggle="offcanvas" 
+        aria-label="Открыть меню"
+        >
+        </button>
+        <div class="row">
+            <!-- Боковая навигация -->
+            <nav id="sidebar" class="col-md-2 sidebar offcanvas offcanvas-start show">
+                <div class="sidebar-sticky">
+                    <!--Крестик-->
+                    <div class="row d-md-none d-xs-block d-flex justify-content-end">
+                        <span class="close-sidebar close-btn"></span>
+                    </div>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#" data-target="my-course">
+                                Мой курс
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-target="tools">
+                                Полезные инструменты
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" data-target="support">
+                                Связаться с техподдержкой
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+            <!-- Основной блок -->
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+                <div id="content">
+                    <!-- Контент по умолчанию -->
+                    <div id="my-course" class="content-section">
+                        <h2>Мой курс</h2>
+                        <p>Здесь будет информация о вашем курсе.</p>
+                    </div>
+
+                    <!-- Полезные инструменты -->
+                    <div id="tools" class="content-section" style="display: none;">
+                        <h2>Полезные инструменты</h2>
+                        <div class="calculator">
+                            <h3>Калькулятор ИМТ</h3>
+                            <form id="bmi-calculator">
+                                <div class="form-group">
+                                    <label for="weight">Вес (кг):</label>
+                                    <input type="number" class="form-control" id="weight" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="height">Рост (см):</label>
+                                    <input type="number" class="form-control" id="height" required>
+                                </div>
+                                <button type="submit" class="btn-calculate btn-primary">Рассчитать ИМТ</button>
+                            </form>
+                            <p id="bmi-result"></p>
+                        </div>
+                    </div>
+
+                    <!-- Техподдержка -->
+                    <div id="support" class="content-section" style="display: none;">
+                        <h2>Связаться с техподдержкой</h2>
+                        <div class="support-links">
+                            <a href="#" target="_blank">
+                                <img src="img/zaglushka.jpg" alt="Telegram" width="50" height="50">
+                            </a>
+                            <a href="#" target="_blank">
+                                <img src="img/zaglushka.jpg" alt="WhatsApp" width="50" height="50">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </main>
         </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/personalaccountscript.js"></script>
 </body>
 </html>
