--- a/final.html
+++ b/final.html
@@ -9,40 +9,91 @@
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="card shadow">
-            <div class="card-header bg-primary text-white">
-                <h2 class="card-title">Ваши результаты</h2>
+    <div class="background-animation">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+    </div>
+    <!-- Шапка сайта -->
+    <header>
+        <nav class="navbar navbar-dark">
+            <div class="container-fluid">
+                <!-- Логотип или текст "Anatomia" -->
+                <a class="navbar-brand" href="index.html">Anatomia</a>
+
+                <!-- Бургер-меню -->
+                <button 
+                    class="navbar-toggler" 
+                    type="button" 
+                    data-bs-toggle="collapse" 
+                    data-bs-target="#navbarNav" 
+                    aria-controls="navbarNav" 
+                    aria-expanded="false" 
+                    aria-label="Навигация"
+                >
+                    <span class="navbar-toggler-icon" style="color: #fff"></span>
+                </button>
+
+                <!-- Вкладки меню -->
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="authform.html">Личный кабинет</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="personalaccount.html">Личный кабинет Пример</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">О нас</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Поддержка</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="card-body">
-                <!-- Блок с ИМТ -->
-                <div class="result-block mb-4">
-                    <h3>Индекс массы тела (ИМТ)</h3>
-                    <div class="progress">
-                        <div id="bmi-progress" class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+        </nav>
+    </header>
+
+    <section>
+        <div class="container mt-5">
+            <div class="card shadow">
+                <div class="card-header text-white">
+                    <h2 class="card-title">Ваши результаты</h2>
+                </div>
+                <div class="card-body">
+                    <!-- Блок с ИМТ -->
+                    <div class="result-block mb-4">
+                        <h3>Индекс массы тела (ИМТ)</h3>
+                        <div class="progress mt-4">
+                            <div id="bmi-progress" class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <p id="bmi-value" class="mt-2"></p>
+                        <p id="bmi-category"></p>
                     </div>
-                    <p id="bmi-value" class="mt-2"></p>
-                    <p id="bmi-category" class="text-muted"></p>
-                </div>
-
-                <!-- Блок с ежедневным потреблением калорий -->
-                <div class="result-block mb-4">
-                    <h3>Ежедневное потребление калорий</h3>
-                    <p id="calories-value" class="display-4 text-primary"></p>
-                    <p class="text-muted">Рекомендуемое количество калорий для поддержания веса.</p>
-                </div>
-
-                <!-- Блок с ежедневным потреблением воды -->
-                <div class="result-block">
-                    <h3>Ежедневное потребление воды</h3>
-                    <p id="water-value" class="display-4 text-primary"></p>
-                    <p class="text-muted">Рекомендуемое количество воды в день.</p>
+    
+                    <!-- Блок с ежедневным потреблением калорий -->
+                    <div class="result-block mb-4">
+                        <h3>Ежедневное потребление калорий</h3>
+                        <p id="calories-value" class="display-4 text-primary"></p>
+                        <p>Рекомендуемое количество калорий для поддержания веса.</p>
+                    </div>
+    
+                    <!-- Блок с ежедневным потреблением воды -->
+                    <div class="result-block mb-4">
+                        <h3>Ежедневное потребление воды</h3>
+                        <p id="water-value" class="display-4 text-primary"></p>
+                        <p>Рекомендуемое количество воды в день.</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/finalscript.js"></script>
+    <script src="scripts/bganimation.js"></script>
 </body>
 </html>
