--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANATOMIA - Центр здоровья и похудения</title>
+    <title>Anatomia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/indexstyle.css">
@@ -19,8 +19,8 @@
     </div>
     <div class="container">
         <div class="main-title">
-            <h1>ANATOMIA</h1>
-            <p>Твой диетолог, тренер, мама и папа</p>
+            <h1>Anatomia</h1>
+            <p>Путь к идеальному телу начинается здесь</p>
         </div>
 
         <div class="gender-container">
@@ -53,7 +53,7 @@
 
             // Перенаправление при клике на карточку женщины
             document.getElementById('female-card').addEventListener('click', function () {
-                window.location.href = 'female.html';
+                window.location.href = 'womenspage.html';
             });
         });
     </script>
